Mon Apr 22 10:25:21 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_hdtoa): revert r29729.
	  If you want ruby to behave as before on x86, specify to use SSE like
	  -msse2 -mfpmath=sse for gcc.

Sun Apr 21 23:19:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* configure.in: Revert using sigsetjmp by default due to performance
	  problems on some systems (eg. older Linux)

Sun Apr 21 21:35:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* configure.in: Use sigsetjmp by default so jumping out of signal
	  handlers properly restores the signal mask and SS_ONSTACK flag.
	  [ruby-core:54175] [Bug #8254]

	* configure.in: Manually check for presence of sigsetjmp. It is not a
	  function on some systems, so AC_CHECK_FUNCS cannot be used.

Sun Apr 21 08:00:55 2013  Tanaka Akira  <akr@fsij.org>

	* test/csv/test_features.rb, test/logger/test_logger.rb
	  test/mkmf/test_have_macro.rb, test/net/http/test_http.rb,
	  test/openssl/test_config.rb, test/psych/test_encoding.rb,
	  test/psych/test_exception.rb, test/psych/test_psych.rb,
	  test/psych/test_tainted.rb, test/readline/test_readline.rb,
	  test/rexml/test_contrib.rb, test/ruby/test_autoload.rb,
	  test/ruby/test_beginendblock.rb, test/ruby/test_exception.rb,
	  test/ruby/test_file.rb, test/ruby/test_io.rb,
	  test/ruby/test_marshal.rb, test/ruby/test_process.rb,
	  test/ruby/test_require.rb, test/ruby/test_rubyoptions.rb,
	  test/syslog/test_syslog_logger.rb, test/webrick/test_httpauth.rb,
	  test/zlib/test_zlib.rb: Use Tempfile.create.

Sun Apr 21 00:15:36 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile.create): Close when the block exits.

Sat Apr 20 23:38:14 2013  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/httpauth/htpasswd.rb: Use Tempfile.create to avoid
	  unintentional unlink() by the finalizer.
	  lib/webrick/httpauth/htdigest.rb: Ditto.

Sat Apr 20 22:47:48 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile.create): New method.