@@ -1,3 +1,8 @@
+Mon Apr 22 17:09:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (r_object0): copy all instance variables not only generic
+	  ivars, before calling post proc.  [ruby-core:51163] [Bug #7627]
+
 Mon Apr 22 10:25:21 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* util.c (ruby_hdtoa): revert r29729.
